# TemplateOpenGL

./: CMakeLists.txt
Shaders/: fragment2.fs
headers/: Camera.h  GpuBuffer.h  Mesh.h  Object3d.h  RenderAPI.h  Shader.h  ShaderManager.h  Texture.h  Window.h  camera.h  mesh.h  object3d.h  renderAPI.h  shader.h  shaderManager.h  texture.h  window.h
headers/MathHeaders/: Colour.h  Matrix3.h  Matrix4.h  Vector2.h  Vector3.h  Vector4.h
include/glad/: glad.h
shaders/: fragment.fs  fragment.fsh  vertex.vsh
source/: main.cpp  shader.cpp
src/: glad.c
